--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <title>ユーザー登録</title>
-  </head>
-  <body>
-    <h1>ユーザー登録</h1>
-    <form action="{% url 'accounts:signup' %}" method="post">
-      {% csrf_token %} {{ form.as_p }}
-      <button type="button" onclick="location.href=`{% url 'sns:top' %}`">
-        戻る
-      </button>
-      <input type="submit" value="登録" />
-    </form>
-  </body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <div class="container">
+        <div class="signup-title">ユーザー登録</div>
+        <form action="{% url 'accounts:signup' %}" method="post" class="signup-form">
+            {% csrf_token %} {{ form.as_p }}
+            <button type="button" class="btn btn-light back-btn" onclick="location.href=`{% url 'sns:top' %}`">戻る</button>
+            <input type="submit" class="btn btn-primary" value="登録" />
+        </form>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
