--- a/sns/templates/sns/post_list.html
+++ b/sns/templates/sns/post_list.html
@@ -1,18 +1,22 @@
 {% extends 'sns/base.html' %}
-
+{% load static %}
 {% block title %}
   タイムライン
 {% endblock title %}
 
 {% block content %}
-  <h1>タイムライン</h1>
-  <hr>
-  {% for object in object_list reversed %}
-    <div>
-      {{ object.updated_at }},
-      <a href="{% url 'sns:userlist' object.username %}">{{ object.username }}</a>
-    </div>
-    <a href="{% url 'sns:detail' object.pk %}">{{ object.text }}</a>
+  <div class="container">
+    <h1 class="mt-3">タイムライン</h1>
     <hr>
-  {% endfor %}
+    {% for object in object_list reversed %}
+      <div class="mb-2">
+        <small>{{ object.updated_at }},</small>
+        <a href="{% url 'sns:userlist' object.username %}">{{ object.username }}</a>
+      </div>
+      <a href="{% url 'sns:detail' object.pk %}" class="text-dark">
+        <p>{{ object.text }}</p>
+      </a>
+      <hr>
+    {% endfor %}
+  </div>
 {% endblock content %}
