--- a/sns/templates/sns/top.html
+++ b/sns/templates/sns/top.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang='ja'>
-  <head>
-    <meta charset='UTF-8' />
+{% load static %}
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
     <title>SNS</title>
-  </head>
-  <body>
-      <p>SNS</p>
-      <p>DjangoのSNS</p>
-      <ul>
-        <li><a href="{% url 'accounts:signup' %}">ユーザー登録</a></li>
-        <li><a href="{% url 'accounts:login' %}">ログイン</a></li>
-      </ul>
-  </body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+<body>
+    <div class="container">
+        <div class="sns-title">SNS</div>
+        <div class="sns-description">DjangoのSNS</div>
+        <ul class="sns-links">
+            <li><a href="{% url 'accounts:signup' %}" class="btn btn-primary btn-lg">ユーザー登録</a></li>
+            <li><a href="{% url 'accounts:login' %}" class="btn btn-secondary btn-lg">ログイン</a></li>
+        </ul>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
