--- a/sns/templates/sns/top.html
+++ b/sns/templates/sns/top.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static '/icon/favicon.ico' %}">
     <meta charset="UTF-8">
     <title>SNS</title>
     <!-- Bootstrap CSS -->
