--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static '/icon/favicon.ico' %}">
     <meta charset="UTF-8" />
     <title>ログイン</title>
     <!-- 外部のCSSファイルを参照 -->
