--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static '/icon/favicon.ico' %}">
     <meta charset="UTF-8">
     <title>ログアウト</title>
     <!-- Bootstrap CSS -->
