--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,6 +2,7 @@
 {% load static %}
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static '/icon/favicon.ico' %}">
     <meta charset="UTF-8">
     <title>ユーザー登録</title>
     <!-- Bootstrap CSS -->
