--- a/sns/templates/sns/base.html
+++ b/sns/templates/sns/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <link rel="icon" href="{% static '/icon/favicon.ico' %}">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap CSS -->
