--- a/sns/templates/sns/post_list.html
+++ b/sns/templates/sns/post_list.html
@@ -9,14 +9,16 @@
     <h1 class="mt-3">タイムライン</h1>
     <hr>
     {% for object in object_list reversed %}
+    <div class="container">
       <div class="mb-2">
         <small>{{ object.updated_at }},</small>
-        <a href="{% url 'sns:userlist' object.username %}">{{ object.username }}</a>
+        <a class="text-dark" href="{% url 'sns:userlist' object.username %}">{{ object.username }}</a>
       </div>
       <a href="{% url 'sns:detail' object.pk %}" class="text-dark">
         <p>{{ object.text }}</p>
       </a>
       <hr>
+      </div>
     {% endfor %}
   </div>
 {% endblock content %}
